Wrap pages to layout, fix header paddings

--- a/src/app/layout/Header/Header.module.css
+++ b/src/app/layout/Header/Header.module.css
@@ -3,7 +3,7 @@
 	grid-template-columns: 1fr auto auto;
 	grid-gap: 30px;
 	align-items: center;
-	padding-right: 30px;
+	padding: 0 30px;
 
 	background-color: var(--white);
 	box-shadow: 0 5px 16.5px -11px rgba(0, 0, 0, 0.25);
